syntax = "proto3";

package friend;

import "google/protobuf/timestamp.proto";

option go_package = "proto/friend";

message Friend {
    int32 id = 1;
    string user_id = 2;
    string friend_id = 3;
    string status = 4;
    google.protobuf.Timestamp created_at = 5;     
    google.protobuf.Timestamp updated_at = 6;    
}

message CreateFriendRequest {
    string user_id = 1;
    string friend_id = 2;
    string status = 3;
}

message CreateFriendResponse {
    Friend friend = 1;
}

message FindAllFriendsRequest {}

message FindAllFriendsResponse {
    repeated Friend friends = 1;
}

message FindAllFriendsByUserIDRequest {
    string user_id = 1;
}

message FindAllFriendsByUserIDResponse {
    repeated Friend friends = 1;
}

message FindAllFriendsByIsFriendRequest {
    string user_id = 1;
}

message FindAllFriendsByIsFriendResponse {
    repeated Friend friends = 1;
}

message FindAllFriendRequestsRequest {
    string user_id = 1;
}

message FindAllFriendRequestsResponse {
    repeated Friend friends = 1;
}

message IsMyFriendRequest {
    string user_id = 1;
    string friend_id = 2;
}

message IsMyFriendResponse {
    string status = 1;
}

message DeleteFriendRequest {
    int32 id = 1;
}

message DeleteFriendResponse {
    string message = 1;
}

message AcceptFriendRequest {
    string user_id = 1;
    string friend_id = 2;
}

message AcceptFriendResponse {
    Friend friend = 1;
}

service FriendService {
    rpc CreateFriend(CreateFriendRequest) returns (CreateFriendResponse);
    rpc FindAllFriends(FindAllFriendsRequest) returns (FindAllFriendsResponse);
    rpc FindAllFriendRequests(FindAllFriendRequestsRequest) returns (FindAllFriendRequestsResponse);
    rpc FindAllFriendsByUserID(FindAllFriendsByUserIDRequest) returns (FindAllFriendsByUserIDResponse);
    rpc FindAllFriendsByIsFriend(FindAllFriendsByIsFriendRequest) returns (FindAllFriendsByIsFriendResponse);
    rpc DeleteFriend(DeleteFriendRequest) returns (DeleteFriendResponse);
    rpc IsMyFriend(IsMyFriendRequest) returns (IsMyFriendResponse);
    rpc AcceptFriend(AcceptFriendRequest) returns (AcceptFriendResponse);
}

